--- a/index.html
+++ b/index.html
@@ -3,7 +3,325 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SKS Funding</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/general.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="container-pd">
+        <nav class="navbar">
+          <div class="logo">
+            <a href="#" class="logo-text"> SKS Funding</a>
+          </div>
+          <div class="nav-list">
+            <button class="nav-button">Need Help</button>
+
+            <a href="#" class="notification">
+              <svg
+                height="24"
+                viewBox="0 0 512 512"
+                width="24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g
+                  fill="none"
+                  stroke="#000"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="32"
+                >
+                  <path
+                    d="m427.68 351.43c-25.68-31.43-43.81-47.43-43.81-134.08 0-79.35-40.52-107.62-73.87-121.35-4.43-1.82-8.6-6-9.95-10.55-5.85-19.91-22.25-37.45-44.05-37.45s-38.21 17.55-44 37.47c-1.35 4.6-5.52 8.71-9.95 10.53-33.39 13.75-73.87 41.92-73.87 121.35-.05 86.65-18.18 102.65-43.86 134.08-10.64 13.02-1.32 32.57 17.29 32.57h308.88c18.51 0 27.77-19.61 17.19-32.57z"
+                  />
+                  <path d="m320 384v16a64 64 0 0 1 -128 0v-16" />
+                </g>
+              </svg>
+            </a>
+            <a href="#"
+              ><img
+                src="Images/profile.png"
+                alt="Woman with curly hair wearing sunglass"
+                height="30px"
+                class="profile"
+            /></a>
+          </div>
+        </nav>
+
+        <div class="header-content">
+          <div class="section-1">
+            <img
+              src="Images/profile.png"
+              alt="Woman with curly hair wearing sunglass"
+              height="180px"
+              class="profile"
+            />
+
+            <div class="customer-info">
+              <p class="hi">Hi, Emma good morning 👋 </p>
+              <p class="entity">
+                Email- <span class="text">akp.emma1231@gmail.com</span>
+              </p>
+              <p class="entity">
+                Phone- <span class="text">+91-8897584843</span>
+              </p>
+              <p class="entity">
+                Adress-
+                <span class="text">Po Box 2103 Linden, NJ 07036'(USA)</span>
+              </p>
+              <p class="entity">Plan- <span class="text">$100</span></p>
+              <p class="entity">
+                Joined- <span class="text">Mon 22nd Feb 2019</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="profile-status">
+            <p class="percentage-completion">75%</p>
+            <div class="more-info">
+              <div class="more-info-flex">
+                <p class="p-c-line-1">Profile Completion</p>
+                <p class="p-c-line-2">Please complete profile</p>
+              </div>
+              <button class="complete">Complete</button>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <div class="main-content pd">
+        <div class="left-content">
+          <div class="about-family">
+            <p class="about-section fam-header-pd">About my family</p>
+            <div class="abt-fam-flex">
+              <div class="section">
+                <p class="fam-head">COVERED PERSONS</p>
+                <div class="section-img">
+                  <img src="Images/uifaces-human-image.jpg" alt="img"  class="face">
+                  <img src="Images/uifaces-human-image-2.jpg" alt="img" height="32px" width="32px" class="face"/>
+                </div>
+              </div>
+
+              <div class="section">
+                <p class="fam-head">BENEFICIARY PERSONS</p>
+                <div class="section-img">
+                  <img src="Images/uifaces-human-image-3.jpg" alt="img" class="face" />
+                  <img src="Images/uifaces-human-image-4.jpg" alt="img" class="face" />
+                  <img src="Images/uifaces-human-image-5.jpg" alt="img" class="face"/>
+                </div>
+              </div>
+
+              <div class="section">
+                <p class="fam-head">EMERGENCY PERSONS</p>
+
+                <div class="section-img">
+                  <img src="Images/uifaces-human-image-6.jpg" alt="img" class="face" />
+                  <img src="Images/uifaces-human-image-7.jpg" alt="img" class="face"/>
+                  <img src="Images/uifaces-human-image-8.jpg" alt="img" class="face"/>
+                  <img src="Images/profile.png" alt="img" class="face" />
+                </div>
+              </div>
+            </div>
+            <div class="about-me about-section">ABOUT ME</div>
+            <div class="about-me-flex">
+            <p class="entity-abtme">
+              Email- <h3 class="about-text">akp.emma1231@gmail.com</h3>
+            </p>
+            <p class="entity-abtme">
+              Phone- <h3 class="about-text">+91-8897584843</h3>
+            </p>
+            <p class="entity-abtme">
+              Adress-
+              <h3 class="about-text">Po Box 2103 Linden, NJ 07036'(USA)</h3>
+            </p>
+            <p class="entity-abtme">Plan- <h3 class="about-text">$100</h3></p>
+            <p class="entity-abtme">
+              Joined- <h3 class="about-text">Mon 22nd Feb 2019</h3>
+            </p>
+          </div>
+          </div>
+        </div>
+        <div class="nav">
+          <div class="nav-flex">
+            <a href="#"> DASHBOARD </a>
+            <a href="#"> NEW CLAIMS </a>
+            <a href="#"> COMPLETED CLAIMS </a>
+            <a href="#"> PAST CLAIMS </a>
+            <a href="#"> MEMBERS </a>
+            <a href="#"> MY CLAIMS </a>
+          </div>
+          <button class="claim-btn">Claim</button>
+        </div>
+        <div class="main-body">
+          <div class="box-section">
+           <div class="box box-1">
+            <p class="number">23</p>
+            <div class="box-text-img">
+              <p> NEW CLAIMS</p>
+              <img src="" alt="Grp-of-img">
+            </div>
+           </div>
+
+          <div class="box box-2">
+            <p class="number">76</p>
+            <div class="box-text-img">
+              <p> NEW MEMBERS</p>
+              <img src="" alt="Grp-of-img">
+            </div>
+          </div>
+
+          <div class="box box-3">
+            <p class="number">102</p>
+            <div class="box-text-img">
+              <p> TOTAL CLAIMS </p>
+              <img src="" alt="Grp-of-img">
+            </div>
+          </div>
+
+
+            </div>
+
+            <div class="cards-section">
+              <div class="mid-cards">
+                <div class="cards card-1">
+                  <img src="" alt="img-1" class="card-img">
+                  <div class="card-content">
+                    <p class="client-name"> Amelia Kimani</p>
+
+                    <div class="card-content-flex">
+                    <ul class="card-content-vertical-flex">
+                      <li>
+                        <span class="additional-details-head"> Filed- </span> <span class="additional-details">Thu, Jul 10, 2018 730 PM EDT</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Due-</span>  <span class="additional-details">Wed, Jul 23, 2019 12:30 PM</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Address- </span>  <span class="additional-details">Hillside Rd, Hiranandani...</span>
+                      </li>
+
+                    </ul>
+                    </div>
+
+
+                  </div>
+
+                  <button class="pay-btn"> Pay </button>
+                </div>
+
+                <div class="cards card-1">
+                  <img src="Images/card-img-1.jpg" alt="img-1" class="card-img">
+                  <div class="card-content">
+                    <p class="client-name"> GENEVIEVE JUMA </p>
+
+                    <div class="card-content-flex">
+                    <ul class="card-content-vertical-flex">
+                      <li>
+                        <span class="additional-details-head"> Filed- </span> <span class="additional-details">Thu, Jul 10, 2018 730 PM EDT</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Due-</span>  <span class="additional-details">Wed, Jul 23, 2019 12:30 PM</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Address- </span>  <span class="additional-details">Hillside Rd, Hiranandani...</span>
+                      </li>
+
+                    </ul>
+                    </div>
+
+
+                  </div>
+
+                  <button class="pay-btn"> Pay </button>
+                </div>
+
+                <div class="cards card-1">
+                  <img src="" alt="img-1" class="card-img">
+                  <div class="card-content">
+                    <p class="client-name"> THEODORE WACHIRA </p>
+
+                    <div class="card-content-flex">
+                    <ul class="card-content-vertical-flex">
+                      <li>
+                        <span class="additional-details-head"> Filed- </span> <span class="additional-details">Thu, Jul 10, 2018 730 PM EDT</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Due-</span>  <span class="additional-details">Wed, Jul 23, 2019 12:30 PM</span>
+                      </li>
+
+                      <li>
+                        <span class="additional-details-head"> Address- </span>  <span class="additional-details">Hillside Rd, Hiranandani...</span>
+                      </li>
+
+                    </ul>
+                    </div>
+
+
+                  </div>
+
+                  <button class="pay-btn"> Pay </button>
+                </div>
+              </div>
+
+              <div class="right-card">
+                <p class="right-card-header"> ACTIVITY</p>
+                <div class="activity-details">
+                  <ul class="activity-list">
+                    <li class="list-1">
+                      <p class="list-header"> Claimed $2000</p>
+                      <p class="list-detail">23 members are got claimed in
+                        Washington DC</p> 
+
+                      <p class="list-time"> 05:40pm</p>
+
+
+                    </li>
+
+                    <li class="list-1">
+                      <p class="list-header"> 102 New Members</p>
+                      <p class="list-detail">We have 102 registrations
+                        check out their profiles</p> 
+
+                      <p class="list-time"> 05:40pm</p>
+
+
+                    </li>
+
+                    <li class="list-1">
+                      <p class="list-header"> 3 Claims are waiting</p>
+                      <p class="list-detail">Please contribute them, they are
+                        Waiting for your help</p> 
+
+                      <p class="list-time"> 05:40pm</p>
+
+
+                    </li>
+
+                    <li class="list-1">
+                      <p class="list-header"> 02 New Members</p>
+                      <p class="list-detail">We have 102 registrations
+check out their profiles</p> 
+
+                      <p class="list-time"> 05:40pm</p>
+
+
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
