--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
           <div class="nav-list">
             <button class="nav-button">Need Help</button>
-
+            <div class="notication-icon">
             <a href="#" class="notification">
               <svg
                 height="24"
@@ -45,11 +45,12 @@
                 </g>
               </svg>
             </a>
+          </div>
             <a href="#"
               ><img
                 src="Images/profile.png"
                 alt="Woman with curly hair wearing sunglass"
-                height="30px"
+                height="32px"
                 class="profile"
             /></a>
           </div>
@@ -86,7 +87,11 @@
           <div class="profile-flex">
 
           <div class="profile-status">
-            <p class="percentage-completion">75%</p>
+            <div class="progress-container">
+              <div class="progress-bar-circular">
+                <p class="percentage">75%</p>
+              </div>
+              </div>
             <div class="more-info">
               <div class="more-info-flex">
                 <p class="p-c-line-1">Profile Completion</p>
@@ -172,14 +177,16 @@
             <a href="#"> MEMBERS </a>
             <a href="#"> MY CLAIMS </a>
           </div>
-          <button class="claim-btn">Claim</button>
+          <button class="claim-btn"> <svg class="pay-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+          </svg> Claim</button>
         </div>
         <div class="main-body">
           <div class="box-section">
            <div class="box box-1">
             <p class="number">23</p>
             <div class="box-text-img">
-              <p> NEW CLAIMS</p>
+              <p class="box-text"> NEW CLAIMS</p>
               <div class="box-img-flex">
               <img src="Images/uifaces-human-image-2.jpg" alt="img-1" class="box-img">
               <img src="Images/uifaces-human-image-3.jpg" alt="img-2" class="box-img">
@@ -193,7 +200,7 @@
           <div class="box box-2">
             <p class="number">76</p>
             <div class="box-text-img">
-              <p> NEW MEMBERS</p>
+              <p class="box-text"> NEW MEMBERS</p>
               <div class="box-img-flex">
                 <img src="Images/uifaces-human-image-5.jpg" alt="img-1" class="box-img">
                 <img src="Images/uifaces-human-image-6.jpg" alt="img-2" class="box-img">
@@ -207,7 +214,7 @@
           <div class="box box-3">
             <p class="number">102</p>
             <div class="box-text-img">
-              <p> TOTAL CLAIMS </p>
+              <p class="box-text"> TOTAL CLAIMS </p>
               <div class="box-img-flex">
                 <img src="Images/uifaces-human-image-8.jpg" alt="img-1" class="box-img">
                 <img src="Images/uifaces-human-image-4.jpg" alt="img-2" class="box-img">
@@ -261,7 +268,10 @@
 
                   </div>
 
-                  <button class="pay-btn"> Pay </button>
+                  <button class="pay-btn"> <svg class="pay-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                  </svg>
+                   Pay </button>
                 </div>
 
                 <div class="cards card-1">
@@ -299,7 +309,10 @@
 
                   </div>
 
-                  <button class="pay-btn"> Pay </button>
+                  <button class="pay-btn"> <svg class="pay-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                  </svg>
+                   Pay </button>
                 </div>
 
                 <div class="cards card-1">
@@ -337,7 +350,10 @@
 
                   </div>
 
-                  <button class="pay-btn"> Pay </button>
+                  <button class="pay-btn"> <svg class="pay-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z" />
+                  </svg>
+                   Pay </button>
                 </div>
               </div>
 
